// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`with-noformat-pragma.css - {"checkIgnorePragma":false} format 1`] = `
====================================options=====================================
checkIgnorePragma: false
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/** @noformat */

.class {    display: none;    }

=====================================output=====================================
/** @noformat */

.class {
  display: none;
}

================================================================================
`;

exports[`with-noprettier-pragma.css - {"checkIgnorePragma":false} format 1`] = `
====================================options=====================================
checkIgnorePragma: false
parsers: ["css"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/** @noprettier */

.class {    display: none;    }

=====================================output=====================================
/** @noprettier */

.class {
  display: none;
}

================================================================================
`;
